[package]
name = "rrnn"
version = "0.1.0"
authors = ["Joseph Catrambone <jo.jcat@gmail.com>"]
description = "A port of Andrej Karpathy's recurrent network code to Rust."

[lib]
name = "rrnn"
path = "src/lib.rs"
crate-type = ["staticlib"] # dylib, rlib, staticlib, and cdylib

#[[bin]]
#name = "trainer"
#path = "src/trainer.rs"

[dependencies]
rand = "*"
